--- a/atv-avaliativa-n1/page.html
+++ b/atv-avaliativa-n1/page.html
@@ -18,7 +18,8 @@
         </ul>
     </header>
     <div id="p1" class="profile01">
-        <p>perfil 01</p>
+        <img src=https://s2-techtudo.glbimg.com/L9wb1xt7tjjL-Ocvos-Ju0tVmfc=/0x0:1200x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/q/l/TIdfl2SA6J16XZAy56Mw/canvaai.png 
+        width="700" height="500"/>
     </div>
     <div id="p2" class="profile02">
         <p>perfil 02</p>
@@ -29,5 +30,6 @@
     <div id="contact" class="contact">
         <p>contato</p>
     </div>
+    
 </body>
 </html>
