--- a/atv-avaliativa-n1/page.html
+++ b/atv-avaliativa-n1/page.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <!-- <link rel="stylesheet" href="style.css"/> -->
-    <!-- <script src="script.js"></script> -->
+    <link rel="stylesheet" href="style.css"/>
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -18,11 +18,17 @@
         </ul>
     </header>
     <div id="p1" class="profile01">
-        <img src=https://s2-techtudo.glbimg.com/L9wb1xt7tjjL-Ocvos-Ju0tVmfc=/0x0:1200x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/q/l/TIdfl2SA6J16XZAy56Mw/canvaai.png 
-        width="700" height="500"/>
+        <div class="circle">
+            <img src="https://i.pinimg.com/564x/86/f8/6a/86f86ac042b3f2cf670a8d9a61b495a9.jpg">
+            <label for="nome">insira seu nome</label>
+            <input maxlength="10" minlength="3" type="text" name="name" placeholder="name">
     </div>
     <div id="p2" class="profile02">
         <p>perfil 02</p>
+        <div class="columnLabelWithInput">
+            <label for="num1">Numero 01</label>
+            <input class="inputs-style" type="number" id="num1" placeholder="Insira um numero"/>
+        </div>
     </div>
     <div id="tec" class="tec">
         <p>tecnologias</p>
@@ -30,6 +36,7 @@
     <div id="contact" class="contact">
         <p>contato</p>
     </div>
-    
+
 </body>
-</html>
+</html> 
+
