--- a/restaurante/cardapio/page.html
+++ b/restaurante/cardapio/page.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../assets/estrogonofe.jpeg" class="card-img-top" alt="Prato 02">
+            <img width="300px" height="200px" src="../assets/estrogonofe.jpg" class="card-img-top" alt="Prato 02">
             <div class="card-body">
               <h5 class="card-title">Strogonof</h5>
               <p class="card-text">R$ 18,20</p>
