--- a/atv-avaliativa/page.html
+++ b/atv-avaliativa/page.html
@@ -15,7 +15,7 @@
     <header>
         <ul>
             <li><a href="#p1">Perfil 01</a></li>
-            <li><a href="#p2">Perfil 02</a></li>
+            <!-- <li><a href="#p2">Perfil 02</a></li> -->
             <li><a href="#tec">Tecnologias</a></li>
             <li><a href="#contact">Contato</a></li>
         </ul>
@@ -23,20 +23,31 @@
     <div id="p1" class="profile01">
         <div class="left-profile01">
             <div class="rel">
-                <img class="img-01" src="https://s2-techtudo.glbimg.com/JsE244mucjKWLYtNgeiDyfVYlJQ=/0x129:1024x952/888x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2023/7/i/ME2AxRRoygUyFPCDe0jQ/3.png" alt="Imagem de perfil">
+                <img class="img-01" src="https://i.pinimg.com/564x/84/90/2c/84902cdd8579de857eab0b29e95f753a.jpg" alt="Imagem de perfil">
             </div>
         </div>
         <div class="right-profile02">
-            <h2 class="nome-p1">Andre Dias</h2>
+            <h2 class="nome-p1">Isabel Marques</h2>
             <p class="p-p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae numquam consequuntur tempore quae rerum laboriosam soluta error? Doloribus suscipit, unde vel repudiandae nulla maiores dolore modi. Voluptas, modi dolorem?</p>
         </div>
     </div>
-    <div id="p2" class="profile02">
-        <p>perfil 02</p>
-    </div>
+    <!-- ------------------------------------------------------------------------------------------------------------------------- -->
+    <!-- <div id="p2" class="profile02">
+        <p>perfil 02</p> 
+        <div class="right-profile01">
+            <div class="rel-2">
+                <img class="img-02" src="https://i.pinimg.com/564x/84/90/2c/84902cdd8579de857eab0b29e95f753a.jpg" alt="Imagem de perfil">
+            </div>
+        </div>
+        <div class="left-profile02">
+            <h2 class="nome-p2">Isabel Marques</h2>
+            <p class="p-p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae numquam consequuntur tempore quae rerum laboriosam soluta error? Doloribus suscipit, unde vel repudiandae nulla maiores dolore modi. Voluptas, modi dolorem?</p>
+        </div>
+    </div> -->
+    <!-- -------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <div id="tec" class="tec">
-        <h2>Tecnologias</h2>
-        <img src="./img/iconesTecno.jpg" alt="Icones" width="400px" height="auto" style="border-radius:20px ;">
+        <h1>Tecnologias</h1>
+        <img src="./img/iconesTecno.jpg" alt="Icones" width="400px" height="auto">
         <div class="flex-cards">
             <div class="card">
                 <h3>HTML</h3>
