--- a/atv-avaliativa/page.html
+++ b/atv-avaliativa/page.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <ul>
-            <li><a href="#p1">Perfil 01</a></li>
+            <li><a href="#p1">Perfil</a></li>
             <!-- <li><a href="#p2">Perfil 02</a></li> -->
             <li><a href="#tec">Tecnologias</a></li>
             <li><a href="#contact">Contato</a></li>
@@ -22,8 +22,8 @@
     </header>
     <div id="p1" class="profile01">
         <div class="left-profile01">
-            <div class="rel">
-                <img class="img-01" src="https://i.pinimg.com/564x/84/90/2c/84902cdd8579de857eab0b29e95f753a.jpg" alt="Imagem de perfil">
+            <div class="rel">                
+<img class="img-01" src="./img/perfil.png"  alt="Imagem de perfil">
             </div>
         </div>
         <div class="right-profile02">
